# DE_HW

./: .gitignore  .pylintrc  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt  vars.json
docs/: README.md
makefiles/: local.init.sh  local.mk  local.rebuild.sh  local.start.sh  local.stop.sh
src/dags/: de_hw_task.py  de_hw_tasks.py  de_hw_utils.py
src/dags/operators/: create_temp_folder_operator.py  remove_folder_operator.py
tests/: test_dag.py  test_tasks.py
